@@ -261,6 +261,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #3002: ``shutil.copyfile()`` and ``shutil.copytree()`` now raise an
+  error when a named pipe is encountered, rather than blocking infinitely.
+
 - Issue #3959: The ipaddr module has been added to the standard library.
   Contributed by Google.
 
